--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="clínica, médico, centro médico, salud, turno, turno medico">
+    <meta name="description" content="saca un turno en el centro medico healthar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css" />
     <title>Centro médico HealthAr</title>
@@ -70,7 +72,7 @@
       <section class="especialidades">
         <div class="especialidad_texto">
           <h2 class="subtitulos_secciones">Especialidades</h2>
-          <p class="texto_gris">
+          <p>
           Explore las distintas especialidades que brindamos
           </p>
         </div>
@@ -78,24 +80,31 @@
           <ul>
             <li>
               <a href="#"><img src="./images/cardiologia_icon.png" width="150" alt="icono de un corazón" /></a>
+              <p>Cardiologia</p>
             </li>
             <li>
               <a href="#"><img src="./images/gastroenterologia_icon.png" width="150" alt="icono de estómago" /></a>
+              <p>Gastroenterologia</p>
             </li>
             <li>
               <a href="#" ><img src="./images/neurologia_icon.png" width="150" alt="icono de un cerebro" /></a>
+              <p>Neurología</p>
             </li>
             <li>
               <a href="#"><img src="./images/oftalmologia_icon.png" width="150" alt="icono de un ojo" /></a>
+              <p>Oftalmología</p>
             </li>
             <li>
               <a href="#"><img src="./images/odontologia_icon.png" width="150" alt="icono de un diente" /></a>
+              <p>Odontología</p>
             </li>
             <li>
               <a href="#" ><img src="./images/radiologia_icon.png" width="150" alt="icono de una radiografía" /></a>
+              <p>Radiologia</p>
             </li>
             <li>
               <a href="#"><img src="./images/nutricion_icon.png" width="150" alt="icono de una manzana" /></a>
+              <p>Nutrición</p>
             </li>
           </ul>
         </div>
@@ -106,7 +115,7 @@
       <section class="servicios">
         <div class="servicio_texto">
           <h2 class="subtitulos_secciones">Servicios</h2>
-          <p class="texto_gris">
+          <p>
             Contamos con servicios exclusivos para nuestros pacientes, y así
             brindar una atención integral y centralizada en un sólo lugar.
           </p>
@@ -134,14 +143,14 @@
         <div class="beneficio_1">
           <img src="./images/beneficio_01.png" alt="icono laboratorio" />
           <h3 class="subtitulos_secciones">Laboratorio propio</h3>
-          <p class="texto_gris">
+          <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Perspiciatis, facere!
           </p>
         </div>
         <div class="beneficio_2">
           <img src="./images/beneficio_02.png" alt="icono laboratorio 2" />
-          <h3 class="subtitulos_secciones">Investigación y Desarrollo</h3>
+          <h3 class="subtitulos_secciones">Investigación</h3>
           <p class="texto_gris">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Perspiciatis, facere!
@@ -157,7 +166,7 @@
         </div>
         <div class="beneficio_4">
           <img src="./images/beneficio_04.png" alt="icono frasco de ensayo" />
-          <h3 class="subtitulos_secciones">Ensayos de laboratorio</h3>
+          <h3 class="subtitulos_secciones">Laboratorio</h3>
           <p class="texto_gris">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Perspiciatis, facere!
