Se corrigió el formato y se reemplazó el texto Lorem en profesionales.html

--- a/pages/profesionales.html
+++ b/pages/profesionales.html
@@ -1,142 +1,162 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="profesionales, medicos">
-    <meta name="description" content="Conocé nuestros profesionales del centro medico healthar">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css" />
-    <title>Nuestros Profesionales</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg" style="background-color: white">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../images/logo.png" alt="imagen cruz centro medico HealthAr" /></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/quienes_somos.html">Quiénes somos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/profesionales.html">Nuestros Profesionales</a>
-              </li>       
-             <li class="nav-item">
-                <a class="nav-link" href="../pages/sucursales.html">Sucursales</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Ingrese su búsqueda" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Buscar</button>
-            </form>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords" content="profesionales, medicos">
+  <meta name="description" content="Conocé nuestros profesionales del centro medico healthar">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css" />
+  <title>Nuestros Profesionales</title>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg" style="background-color: white">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="../images/logo.png" alt="imagen cruz centro medico HealthAr" /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/quienes_somos.html">Quiénes somos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/profesionales.html">Nuestros Profesionales</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/sucursales.html">Sucursales</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Ingrese su búsqueda" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
         </div>
-      </nav>
-    </header>
-    <main>
-      <section class="nuestros_profesionales">
-        <h1 class="titulo_secciones">Nuestros profesionales</h1>
-        <img
-          src="../images/doctores.jpg" alt="imagen de doctores"/>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum
-          aspernatur, quas nam quam adipisci distinctio minima ipsum, itaque
-          quidem assumenda exercitationem alias asperiores, impedit ratione.
-          Voluptatibus, ad. Modi, molestiae magnam?
-        </p>
-        <div class="especialidad">
-          <h2>Cardiología</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-            repellendus debitis voluptas culpa odit, minima tempore deserunt
-            commodi labore.
-          </p>
-        </div>
-        <div class="especialidad">
-          <h2>Gastroenterologia</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-            repellendus debitis voluptas culpa odit, minima tempore deserunt
-            commodi labore.
-          </p>
-        </div>
-        <div class="especialidad">
-          <h2>Neurología</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-            repellendus debitis voluptas culpa odit, minima tempore deserunt
-            commodi labore.
-          </p>
-        </div>
-        <div class="especialidad">
-          <h2>Odontología</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-            repellendus debitis voluptas culpa odit, minima tempore deserunt
-            commodi labore.
-          </p>
-        </div>
-        <div class="especialidad">
-          <h2>Oftalmologia</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-            repellendus debitis voluptas culpa odit, minima tempore deserunt
-            commodi labore.
-          </p>
-        </div>
-        <div class="especialidad">
-          <h2>Radiologia</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-            repellendus debitis voluptas culpa odit, minima tempore deserunt
-            commodi labore.
-          </p>
-        </div>
-        <div class="especialidad">
-          <h2>Nutrición</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-            repellendus debitis voluptas culpa odit, minima tempore deserunt
-            commodi labore.
-          </p>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <div class="footer_titulo">
-        <h3>Seguinos en nuestras redes!</h3>
       </div>
-      <div class="footer_redes">
+    </nav>
+  </header>
+  <main>
+    <section class="nuestros_profesionales">
+      <h1 class="titulo_secciones">Nuestros profesionales</h1>
+      <img src="../images/doctores.jpg" alt="imagen de doctores" />
+      <p>
+        Los profesionales de HealthAr están comprometidos a realizar su trabajo con la mayor competencia profesional y
+        humana. Esta forma de entender el trabajo lleva a cada uno a trabajar en equipo, a buscar la excelencia, a
+        servir a los demás con su tarea y asumir la propia responsabilidad en sus decisiones y actuaciones
+        profesionales.
+        Asimismo, una de las diferencias esenciales de HealthAr es que, por su modelo de dedicación exclusiva, todos
+        nuestros especialistas distribuyen su tiempo entre asistencia médica a los pacientes, docencia e investigación.
+
+        Nuestros profesionales entienden que formación e investigación significan nuevas oportunidades para nuestros
+        pacientes, y con ello en mente se ha diseñado nuestro modelo.
+      </p>
+      <div class="especialidad">
+        <h2>Gastroenterología</h2>
+        <h3>Dr. José Fernández</h3>
         <ul>
-          <li class="icono_fb">
-            <a href="https://www.facebook.com/" target="_blank"><img src="../images/fb_icon.png" width="30" alt="icono de facebook" /></a>
-          </li>
-          <li class="icono_tw">
-            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../images/twitter_icon.png" width="30" alt="icono de twitter" /></a>
-          </li>
-          <li class="icono_ig">
-            <a href="https://www.instagram.com" target="_blank"><img src="../images/ig_icon.png" width="30" alt="icono de instagram" /></a>
-          </li>
-          <li  class="icono_yt">
-            <a href="https://www.youtube.com/" target="_blank"><img src="../images/yt_icon.png" width="30" alt="icono de youtube" /></a>
-          </li>
+          <li>Licenciado (1985) y Doctor (1996) en Medicina y Cirugía por la UBA. Reconocimiento de suficiencia para el
+            desarrollo de actividades de investigación (1991), con calificación de sobresaliente.</li>
+          <li>Médico especialista de Aparato Digestivo por la Clínica Universidad de La Plata (1987-1990).</li>
         </ul>
       </div>
-      <div class="footer_copyright">
-        <p>© Copyright - Todos los derechos reservados</p>
+      <div class="especialidad">
+        <h2>Cardiología</h2>
+        <h3>Dr. Carlos Arellano</h3>
+        <ul>
+          <li>Especialista en Cardiolovía (vía MIR) en el año 1994 en el Hospital Universitario Puerta de Hierro de
+            Madrid.</li>
+          <li>Máster en intervencionismo endosvascular estructural (2019-actualidad) en la Universidad de La Plata.</li>
+        </ul>
       </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+      <div class="especialidad">
+        <h2>Neurología</h2>
+        <h3>Dra. María González</h3>
+        <ul>
+          <li>Licenciada en Medicina y Cirugía por la Universidad de La Plata en el año 1992</li>
+          <li>Especialista en Neurología en el Hospital Universitario Severo Ochoa, Madrid en el año 1999.</li>
+        </ul>
+      </div>
+      <div class="especialidad">
+        <h2>Odontología</h2>
+        <h3>Dr. Juan José García</h3>
+        <ul>
+          <li>Licenciado en Odontologia por la Universidad de Salta en año 1992 con grado de Sobresaliente.</li>
+          <li>Máster Internacional de Endodoncia por las universidades de Santiago de Compostela y Verona (Italia), año
+            2005.</li>
+        </ul>
+      </div>
+      <div class="especialidad">
+        <h2>Oftalmología</h2>
+        <h3>Dr. Alfredo Núñez</h3>
+        <ul>
+          <li>Título de Oftalmología por la Universidad de Facultad de Medicina - La Plata (1993).</li>
+          <li>Ha realizado estancias de especialización y perfeccionamiento en enfermedades de la mácula, vítreo y
+            retina en el Massachusetts Eye and Ear Infirmary de Boston (traumatismos y tumores), y en el Ophthalmic
+            Consultants of Boston (degeneración macular, retinopatía diabética)</li>
+        </ul>
+      </div>
+      <div class="especialidad">
+        <h2>Radiología</h2>
+        <h3>Dra. Gabriela Peralta</h3>
+        <ul>
+          <li>Licenciada en Medicina y Cirugía por la UBA (1994). Especialista en Radiología por Facultad de Medicina - La Plata (1997).</li>
+          <li>Rotación en el área de Radiología Pediátrica del Hospital Charité. Berlin, Alemania.</li>
+        </ul>
+      </div>
+      <div class="especialidad">
+        <h2>Nutrición</h2>
+        <h3>Dr. Norberto Silva</h3>
+        <ul>
+          <li>Licenciado (1992) y Doctor (1999) en Medicina y Cirugía por la Facultad de Medicina - La Plata, realizó la especialidad de Endocrinología y Nutrición en la Clínica Universidad de Navarra.</li>
+          <li>Especialista en el Departamento de Endocrinología y Nutrición de HealthAr desde el año 2004.</li>
+        </ul>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="footer_titulo">
+      <h3>Seguinos en nuestras redes!</h3>
+    </div>
+    <div class="footer_redes">
+      <ul>
+        <li class="icono_fb">
+          <a href="https://www.facebook.com/" target="_blank"><img src="../images/fb_icon.png" width="30"
+              alt="icono de facebook" /></a>
+        </li>
+        <li class="icono_tw">
+          <a href="https://twitter.com/?lang=es" target="_blank"><img src="../images/twitter_icon.png" width="30"
+              alt="icono de twitter" /></a>
+        </li>
+        <li class="icono_ig">
+          <a href="https://www.instagram.com" target="_blank"><img src="../images/ig_icon.png" width="30"
+              alt="icono de instagram" /></a>
+        </li>
+        <li class="icono_yt">
+          <a href="https://www.youtube.com/" target="_blank"><img src="../images/yt_icon.png" width="30"
+              alt="icono de youtube" /></a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer_copyright">
+      <p>© Copyright - Todos los derechos reservados</p>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
