--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -1,126 +1,122 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="historia, nuestros inicios">
-    <meta name="description" content="La historia del centro medico healthar">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css" />
-    <title>Quiénes somos</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg" style="background-color: white">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../images/logo.png" alt="imagen cruz centro medico HealthAr" /></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/quienes_somos.html">Quiénes somos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/profesionales.html">Nuestros Profesionales</a>
-              </li>       
-             <li class="nav-item">
-                <a class="nav-link" href="../pages/sucursales.html">Sucursales</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Ingrese su búsqueda" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Buscar</button>
-            </form>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords" content="historia, nuestros inicios">
+  <meta name="description" content="La historia del centro medico healthar">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css" />
+  <title>Quiénes somos</title>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg" style="background-color: white">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="../images/logo.png" alt="imagen cruz centro medico HealthAr" /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/quienes_somos.html">Quiénes somos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/profesionales.html">Nuestros Profesionales</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/sucursales.html">Sucursales</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Ingrese su búsqueda" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
         </div>
-      </nav>
-    </header>
-    <main>
-      <section class="nuestra_historia">
-        <h1 class="titulo_secciones">Nuestra historia</h1>
-        <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Asperiores sint soluta recusandae maiores, eius quisquam dolore,
-              autem nisi reiciendis suscipit voluptatum doloribus molestiae
-              aliquid rem distinctio tempore? Consectetur, praesentium quasi?
-              Voluptas magnam, amet quibusdam soluta consequatur, fugit
-              doloribus a impedit perspiciatis eligendi libero fugiat, deleniti
-              alias praesentium iste suscipit tenetur commodi! Consectetur sed
-              natus id autem. Hic eveniet alias at! A et alias, sequi qui dicta
-              suscipit fuga quaerat fugiat laboriosam doloribus quas maxime
-              praesentium consectetur illo optio enim unde rem nisi perferendis
-              molestias iure? Ipsum soluta eius asperiores perspiciatis.
-              Nesciunt sint minima magni facere cumque aperiam officiis fugit
-              voluptates omnis quae! Vel in libero sequi ad, doloremque, dolores
-              dignissimos cupiditate tempore ducimus quo ex nam possimus
-              temporibus magnam suscipit! Saepe atque exercitationem animi
-              soluta. Minima fugiat architecto adipisci maxime rem. Quasi
-              ratione doloribus labore veritatis? Libero veniam, qui eum rem
-              natus, ea asperiores odit ipsam praesentium quam sapiente
-              pariatur! Inventore debitis, voluptate quam quis corporis ea omnis
-              delectus dicta soluta temporibus quibusdam, amet quidem
-              reprehenderit et corrupti illo tempora mollitia id, excepturi
-              illum? Consectetur itaque sit et ratione aspernatur.
-        </p>
-        <img src="../images/clinica.jpg" alt="habitación de clinica" />
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores
-          sint soluta recusandae maiores, eius quisquam dolore, autem nisi
-          reiciendis suscipit voluptatum doloribus molestiae aliquid rem
-          distinctio tempore? Consectetur, praesentium quasi? Voluptas magnam,
-          amet quibusdam soluta consequatur, fugit doloribus a impedit
-          perspiciatis eligendi libero fugiat, deleniti alias praesentium iste
-          suscipit tenetur commodi! Consectetur sed natus id autem. Hic eveniet
-          alias at! A et alias, sequi qui dicta suscipit fuga quaerat fugiat
-          laboriosam doloribus quas maxime praesentium consectetur illo optio
-          enim unde rem nisi perferendis molestias iure? Ipsum soluta eius
-          asperiores perspiciatis. Nesciunt sint minima magni facere cumque
-          aperiam officiis fugit voluptates omnis quae! Vel in libero sequi ad,
-          doloremque, dolores dignissimos cupiditate tempore ducimus quo ex nam
-          possimus temporibus magnam suscipit! Saepe atque exercitationem animi
-          soluta. Minima fugiat architecto adipisci maxime rem. Quasi ratione
-          doloribus labore veritatis? Libero veniam, qui eum rem natus, ea
-          asperiores odit ipsam praesentium quam sapiente pariatur! Inventore
-          debitis, voluptate quam quis corporis ea omnis delectus dicta soluta
-          temporibus quibusdam, amet quidem reprehenderit et corrupti illo
-          tempora mollitia id, excepturi illum? Consectetur itaque sit et
-          ratione aspernatur.
-        </p>
-      </section>
-    </main>
-    <footer>
-      <div class="footer_titulo">
-        <h3>Seguinos en nuestras redes!</h3>
       </div>
-      <div class="footer_redes">
-        <ul>
-          <li class="icono_fb">
-            <a href="https://www.facebook.com/" target="_blank"><img src="../images/fb_icon.png" width="30" alt="icono de facebook" /></a>
-          </li>
-          <li class="icono_tw">
-            <a href="https://twitter.com/?lang=es" target="_blank"><img src="../images/twitter_icon.png" width="30" alt="icono de twitter" /></a>
-          </li>
-          <li class="icono_ig">
-            <a href="https://www.instagram.com" target="_blank"><img src="../images/ig_icon.png" width="30" alt="icono de instagram" /></a>
-          </li>
-          <li  class="icono_yt">
-            <a href="https://www.youtube.com/" target="_blank"><img src="../images/yt_icon.png" width="30" alt="icono de youtube" /></a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer_copyright">
-        <p>© Copyright - Todos los derechos reservados</p>
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+    </nav>
+  </header>
+  <main>
+    <section class="nuestra_historia">
+      <h1 class="titulo_secciones">Nuestra historia</h1>
+      <p>
+        El Centro Médico HealthAr ha proporcionado atención en Capital Federal por más de 20 años y en La Plata por más
+        de 5 años. Inaugurado el 5 de enero de 2002 como un hospital comunitario de 85 camas, HealthAr satisfizo una
+        importante necesidad. A lo largo de los años, nuestro centro médico ha ampliado y añadido servicios y tecnología
+        para satisfacer las crecientes necesidades de la ciudad.
+      </p>
+      <h2 class="subtitulos_secciones">Construcción</h2>
+      <p>
+        Después de casi dos años de construcción, el Hospital fué terminado el 27 de diciembre de 2001. Las puertas se
+        abrieron para los pacientes el 5 de enero de 2002. Este hospital de 85 camas, cuya construcción costó 600.000
+        dólares, se llamaría más tarde Centro Médico HealthAr.
+        En los primeros años, el hospital atendía a unos 6.000 pacientes al año. A medida que el número de pacientes
+        crecía, también lo hacía el hospital. Para acomodar este crecimiento, se creó una adición de tres pisos, seguida
+        de una torre de 4 pisos, a la cuál se le agregarían 3 pisos más tarde. "Cuando empezó, sólo tenía tres plantas",
+        dice María Pérez, antigua miembro de la Junta Auxiliar. "Ahora ha subido, y se han añadido varias instalaciones
+        nuevas".
+      </p>
+      <img src="../images/clinica.jpg" alt="habitación de clinica" />
+      <h2 class="subtitulos_secciones">Dificultades</h2>
+      <p>
+        El Centro Médico HealthAr tiene una historia de crecimiento y calidad, pero aún así se enfrentó a algunos
+        momentos difíciles. Durante la década de 2010, el Medical Center Hospital experimentó dificultades financieras.
+        Tras algunos intentos fallidos de recuperación financiera por parte de empresas privadas de gestión, las
+        autoridades municipales se unieron para rescatar el hospital. "Fue terrible intentar mantener el hospital en
+        funcionamiento", recuerda el Dr. Barnardo González, que era jefe de personal en aquella época. "Casi había que
+        mendigar dinero. La creación de la junta directiva fue un gran activo para el hospital y la comunidad. Ha hecho
+        posible toda la expansión".
+      </p>
+      <h2 class="subtitulos_secciones">Actualidad </h2>
+      <p>
+        El Hospital del Centro Médico se ha convertido en algo más que una instalación de 150 camas al abrir una sucursal en la ciudad de La Plata.
+        El futuro es brillante para Centro Médico Healthar con la continua expansión, renovación y progreso. Siempre que nos necesite, esté donde esté, HealthAr tiene a usted y su familia cubierta. 
+      </p>
+    </section>
+  </main>
+  <footer>
+    <div class="footer_titulo">
+      <h3>Seguinos en nuestras redes!</h3>
+    </div>
+    <div class="footer_redes">
+      <ul>
+        <li class="icono_fb">
+          <a href="https://www.facebook.com/" target="_blank"><img src="../images/fb_icon.png" width="30"
+              alt="icono de facebook" /></a>
+        </li>
+        <li class="icono_tw">
+          <a href="https://twitter.com/?lang=es" target="_blank"><img src="../images/twitter_icon.png" width="30"
+              alt="icono de twitter" /></a>
+        </li>
+        <li class="icono_ig">
+          <a href="https://www.instagram.com" target="_blank"><img src="../images/ig_icon.png" width="30"
+              alt="icono de instagram" /></a>
+        </li>
+        <li class="icono_yt">
+          <a href="https://www.youtube.com/" target="_blank"><img src="../images/yt_icon.png" width="30"
+              alt="icono de youtube" /></a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer_copyright">
+      <p>© Copyright - Todos los derechos reservados</p>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
