Se aplicó scss a todas las secciones html

--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -80,7 +80,7 @@
         posible toda la expansión".
       </p>
       <h2 class="subtitulos_secciones">Actualidad </h2>
-      <p>
+      <p class="actualidad">
         El Hospital del Centro Médico se ha convertido en algo más que una instalación de 150 camas al abrir una sucursal en la ciudad de La Plata.
         El futuro es brillante para Centro Médico Healthar con la continua expansión, renovación y progreso. Siempre que nos necesite, esté donde esté, HealthAr tiene a usted y su familia cubierta. 
       </p>
