--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </section>
   </main>
 
-  <!--------------- Footer --------------->
+  <!--------------- Footer -------------->
 
   <footer>
     <div class="footer_titulo">
