se corrigieron comporamientos de responsive y distribución de imgágenes

--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -58,17 +58,19 @@
         para satisfacer las crecientes necesidades de la ciudad.
       </p>
       <h2 class="subtitulos_secciones">Construcción</h2>
-      <p>
-        Después de casi dos años de construcción, el Hospital fué terminado el 27 de diciembre de 2001. Las puertas se
-        abrieron para los pacientes el 5 de enero de 2002. Este hospital de 85 camas, cuya construcción costó 600.000
-        dólares, se llamaría más tarde Centro Médico HealthAr.
-        En los primeros años, el hospital atendía a unos 6.000 pacientes al año. A medida que el número de pacientes
-        crecía, también lo hacía el hospital. Para acomodar este crecimiento, se creó una adición de tres pisos, seguida
-        de una torre de 4 pisos, a la cuál se le agregarían 3 pisos más tarde. "Cuando empezó, sólo tenía tres plantas",
-        dice María Pérez, antigua miembro de la Junta Auxiliar. "Ahora ha subido, y se han añadido varias instalaciones
-        nuevas".
-      </p>
-      <img src="../images/clinica.jpg" alt="habitación de clinica" />
+      <div class="texto_imagen_historia">
+        <img src="../images/clinica.jpg" alt="habitación de clinica" />
+        <p>
+          Después de casi dos años de construcción, el Hospital fué terminado el 27 de diciembre de 2001. Las puertas se
+          abrieron para los pacientes el 5 de enero de 2002. Este hospital de 85 camas, cuya construcción costó 600.000
+          dólares, se llamaría más tarde Centro Médico HealthAr.
+          En los primeros años, el hospital atendía a unos 6.000 pacientes al año. A medida que el número de pacientes
+          crecía, también lo hacía el hospital. Para acomodar este crecimiento, se creó una adición de tres pisos, seguida
+          de una torre de 4 pisos, a la cuál se le agregarían 3 pisos más tarde. "Cuando empezó, sólo tenía tres plantas",
+          dice María Pérez, antigua miembro de la Junta Auxiliar. "Ahora ha subido, y se han añadido varias instalaciones
+          nuevas".
+        </p>
+      </div>
       <h2 class="subtitulos_secciones">Dificultades</h2>
       <p>
         El Centro Médico HealthAr tiene una historia de crecimiento y calidad, pero aún así se enfrentó a algunos
