--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -47,33 +47,37 @@
     <main>
       <section class="sucursales">
         <h1 class="titulo_secciones">Sucursales</h1>
-        <h2 class="subtitulos_secciones">CABA:</h2>
-        <div class="mapouter">
-          <div class="gmap_canvas">
-            <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=fleming&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
-            </iframe>
-            <a href="https://fmovies-online.net">fmovies</a><br />
-              <a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
+        <div class="sucuarsal_ba">
+          <h2 class="subtitulos_secciones">CABA:</h2>
+          <div class="mapouter">
+           <div class="gmap_canvas">
+              <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=fleming&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+              </iframe>
+              <a href="https://fmovies-online.net">fmovies</a><br />
+                <a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
+            </div>
           </div>
-        </div>
-        <p>
+          <p>
           <span class="direccion">Dirección:</span> Gral. Enrique Martínez 575
           Piso 1, C1426 CABA
-        </p>
-        <h2 class="subtitulos_secciones">La Plata:</h2>
-        <div class="mapouter">
-          <div class="gmap_canvas">
-            <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=clinica%20la%20plata&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no"              marginheight="0" marginwidth="0">
-            </iframe>
-            <a href="https://fmovies-online.net">fmovies</a>
-            <br />
-              <a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
-          </div>
+          </p>
         </div>
-        <p>
-          <span class="direccion">Dirección:</span> Av. 7 501, B1900 La Plata,
-          Provincia de Buenos Aires
-        </p>
+        <div class="sucuarsal_laPlata">
+          <h2 class="subtitulos_secciones">La Plata:</h2>
+          <div class="mapouter">
+            <div class="gmap_canvas">
+              <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=clinica%20la%20plata&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no"              marginheight="0" marginwidth="0">
+              </iframe>
+              <a href="https://fmovies-online.net">fmovies</a>
+              <br />
+                <a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
+            </div>
+          </div>
+          <p>
+            <span class="direccion">Dirección:</span> Av. 7 501, B1900 La Plata,
+            Provincia de Buenos Aires
+          </p>
+        </div>
       </section>
     </main>
     <footer>
